[package]
name = "solana-data-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
solana-client = "1.16.6"
solana-sdk = "1.16.6"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }